Created the interact view with the routes